--- a/free-nodes/page-28.htm
+++ b/free-nodes/page-28.htm
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-03-08">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-3-8-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-3-8-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了美国、韩国、日本、新加坡、欧洲、加拿大、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-03-07">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-3-7-clash-windows.htm" class="xcblog-blog-url">
@@ -231,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-12-6-free-clash-subscribe.htm" title="12月6日→22.4M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">12月6日→22.4M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-15-node-share-links.htm" title="11月15日→21.1M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">11月15日→21.1M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-22-node-share-links.htm" title="4月22日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接">4月22日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-9-free-clash-subscribe.htm" title="3月9日18.7M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接">3月9日18.7M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-30-free-shadowrocket-node.htm" title="10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-11-free-clash-subscribe.htm" title="11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-8-free-ssr-node.htm" title="10月8日→22.5M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">10月8日→22.5M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-25-free-node-subscribe.htm" title="4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-2-free-v2ray.htm" title="11月2日→18.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">11月2日→18.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-22724.htm" title="开宠物用品店挣钱吗知乎推荐（开宠物用品店货源）">开宠物用品店挣钱吗知乎推荐（开宠物用品店货源）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-30-clash-node-daily-updates.htm" title="3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接">3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-30-clash-v2ray-ss-ssr.htm" title="4月30日→19.3M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">4月30日→19.3M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-25-free-high-speed-nodes.htm" title="8月25日→22.5M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">8月25日→22.5M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-20881.htm" title="宠物粮市场前景如何（宠物粮食市场）">宠物粮市场前景如何（宠物粮食市场）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-26-free-node-subscribe-links.htm" title="4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接">4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-23-free-clash.htm" title="5月23日→22.6M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">5月23日→22.6M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-19-clash-node-daily-updates.htm" title="7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-1-free-v2ray.htm" title="5月1日→18.8M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">5月1日→18.8M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-10-free-high-speed-nodes.htm" title="11月10日→18.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">11月10日→18.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-28-free-subscribe-node.htm" title="8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -252,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
